# cartesian_control

./: .gitignore  CMakeLists.txt  IMotor.hpp  README.md  Stepper.hpp  cartesian_robot.cpp  cartesian_robot.hpp  data_reader.cpp  data_reader.hpp  i2c_slave.hpp  imotor.hpp  isr_sampling.hpp  platform.h  state_manager.hpp  step_control.cpp  stepper.cpp  stepper.hpp  trajectory_gen.cpp  trajectory_gen.hpp  trajectory_inter.hpp
inc/: imotor.hpp  stepper.hpp
inc/Algorithm/TrajectoryGeneration/: trajectory_data.hpp  trajectory_gen.hpp
inc/Algorithm/TrajectoryInterpolation/: trajectory_data.hpp  trajectory_gen.hpp
inc/Communication/: communication_handler.hpp  data_handler.hpp  i2c_slave.hpp  idata_handler.hpp  message_format.hpp
inc/Machine/: state_manager.hpp
inc/Motor/: imotor.hpp  stepper.hpp
inc/Mutex/: lock_guard.hpp
inc/Sampler/: isr_sampling.hpp
inc/System/Robot/: cartesian_robot.hpp
scripts/: i2c_pi.py  message_send.py
src/: stepper.cpp
src/Algorithm/TrajectoryGeneration/: trajectory_gen.cpp
src/Algorithm/TrajectoryInterpolation/: trajectory_gen.cpp
src/Communication/: communication_handler.cpp  i2c_slave.cpp
src/Machine/: state_manager.cpp
src/Motor/: stepper.cpp
src/System/Robot/: cartesian_robot.cpp
